--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>vueadmin</title>
+  <title>西滨精工</title>
+  <link rel="SHORTCUT ICON" href="static/logo/favicon.ico">
 </head>
 
 <body>
